[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiveforecast"
version = "0.1.0"
description = "A user-friendly interface for time series forecasting using sktime"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "matplotlib>=3.1.0",
    "sktime>=0.27.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=1.0.0"]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "flake8>=3.9.0",
    "sphinx>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/adaptiveforecast"
"Bug Tracker" = "https://github.com/yourusername/adaptiveforecast/issues" 